# aws-dbt-snowflake

./: .gitignore  README.md  pyproject.toml
aws_dbt_snowflake_project/: .user.yml  dbt_project.yml  last_run.txt  last_run_obt.txt  last_run_obt_2.txt  last_run_obt_3.txt  profiles example.yml
aws_dbt_snowflake_project/analyses/: if_else.sql  loop.sql
aws_dbt_snowflake_project/macros/: tag.sql  trimmer.sql
aws_dbt_snowflake_project/models/bronze/: bronze_bookings.sql  bronze_hosts.sql  bronze_listings.sql
aws_dbt_snowflake_project/models/gold/: facts.sql  obt.sql
aws_dbt_snowflake_project/models/gold/ephemeral/: bookings.sql  hosts.sql  listings.sql
aws_dbt_snowflake_project/models/silver/: silver_bookings.sql  silver_hosts.sql  silver_listings.sql
aws_dbt_snowflake_project/models/sources/: sources.yml
aws_dbt_snowflake_project/snapshots/: dim_listings.yml
aws_dbt_snowflake_project/tests/: sources_test.sql
