[project]
name = "aws-dbt-snowflake"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dbt-core>=1.11.2",
    "dbt-databricks>=1.10.9",
    "dbt-snowflake>=1.11.1",
    "numpy>=2.4.1",
    "pandas>=2.3.3",
    "sqlfmt>=0.0.3",
]
